# XRay-Pneumonia-Detection

./: .gitignore  README.md  pyproject.toml
Notebooks/: data_sanity_check.ipynb
models/: baseline simple cnn.pth  best_model_simple_cnn_simple_cnn.pth  simple cnn with augmentation.pth
reports/baseline resnet50 no augmentation/: test_report_resnet50_imagenet.json
reports/baseline simple cnn/: test_report_simple_cnn_simple_cnn.json
reports/resnet50 full training accuracy/: test_report_resnet50_imagenet.json
reports/resnet50 full training f1/: test_report_resnet50_imagenet.json
reports/resnet50 full training f1 no aug/: test_report_resnet50_imagenet.json
reports/resnet50 full training loss/: test_report_resnet50_imagenet.json
src/: cam.py  data_analysis.py  data_management.py  evaluation.py  hyperparameters.py  main.py  model.py
